--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
 							<div class="col-3 mt-4">
 								<div class="card shadow">
 									<div class="item-photo">
-										<img src="assets/img/projects/logos/dws.jpg" alt="Digiworld Solutions" class="img-fluid">
+										<img src="assets/img/projects/logos/DWS.jpg" alt="Digiworld Solutions" class="img-fluid">
 									</div>
 								</div>
 								<div class="item-title">
@@ -798,7 +798,7 @@
 							<div class="col-4 mt-4">
 								<div class="card shadow">
 									<div class="item-photo">
-										<img src="assets/img/projects/webui/raaghu-ai.jpg" alt="Raaghu AI" class="img-fluid">
+										<img src="assets/img/projects/webui/raaghu-ai.JPG" alt="Raaghu AI" class="img-fluid">
 									</div>
 								</div>
 								<div class="item-title">
@@ -809,7 +809,7 @@
 							<div class="col-4 mt-4">
 								<div class="card shadow">
 									<div class="item-photo">
-										<img src="assets/img/projects/webui/raaghu-portal.jpg" alt="Raaghu Portal" class="img-fluid">
+										<img src="assets/img/projects/webui/raaghu-portal.JPG" alt="Raaghu Portal" class="img-fluid">
 									</div>
 								</div>
 								<div class="item-title">
@@ -820,7 +820,7 @@
 							<div class="col-4 mt-4">
 								<div class="card shadow">
 									<div class="item-photo">
-										<img src="assets/img/projects/webui/waiin.jpg" alt="Waiin" class="img-fluid">
+										<img src="assets/img/projects/webui/waiin.JPG" alt="Waiin" class="img-fluid">
 									</div>
 								</div>
 								<div class="item-title">
