--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Material Design for Bootstrap</title>
+  <title> Portfolio | Priyanka Shinkar</title>
   <!-- MDB icon -->
-  <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon">
+  <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
@@ -23,9 +23,6 @@
   <link rel="stylesheet" href="css/style.css">
   <!-- Animate   -->
   <link rel="stylesheet" href="css/modules/animate.css">
-
-
-
 
   <style type="text/css">
   	 
@@ -1059,13 +1056,13 @@
   <!-- End your project here-->
 
 	<!-- jQuery -->
-	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="assets/js/jquery.min.js"></script>
 	<!-- Bootstrap tooltips -->
-	<script type="text/javascript" src="js/popper.js"></script>
+	<script type="text/javascript" src="assets/js/popper.js"></script>
 	<!-- Bootstrap core JavaScript -->
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 	<!-- MDB core JavaScript -->
-	<script type="text/javascript" src="js/mdb.min.js"></script>
+	<script type="text/javascript" src="assets/js/mdb.min.js"></script>
 	<!-- Your custom scripts (optional) -->
 	<script>
 		// $(document).ready(function(){
