Update css and adding social links

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 							  <a class="nav-link" href="#skills">Skills</a>
 							</li>
 
-							<li class="nav-item">
+							<!-- <li class="nav-item">
 							  <a class="nav-link" href="#work-experience">Work Experiencs</a>
-							</li>
+							</li> -->
 
 
 							<!-- <li class="nav-item">
@@ -181,7 +181,7 @@
 								<h2 class="mb-4">About Me</h2>
 							</div>							
 							<p>
-								Experienced Web/UI Designer with 9 years of experience in creating and maintaining functional, attractive, and responsive UI designs.  Clear understanding of modern technologies and best design practices.
+								Experienced Web/UI Designer with 8+ years of experience in creating and maintaining functional, attractive, and responsive UI designs.  Clear understanding of modern technologies and best design practices.
 							</p>
 							<div class="row">
 								<div class="col-md-3 col-3 mb-3">
@@ -206,7 +206,7 @@
 									<b> Location </b>
 								</div>
 								<div class="col-md-9 col-8 mb-3">
-									<b class="mr-2">:</b>  Nashik, Maharashtra
+									<b class="mr-2">:</b>  Mumbai, Maharashtra
 								</div>
 							</div>
 			            </div>
@@ -217,8 +217,8 @@
 			<div class="counter-wrap animate d-flex mt-md-3 fadeInUp animated">
 				<div class="text counter">
 					<p class="mb-0">
-						<div class="number" data-number="9">&nbsp;9</div>
-						<div class="letter">Years of <br/> Experiences</div>
+						<div class="number" data-number="8.9">8.9</div>
+						<div class="letter font-small">Years of <br/> Experiences</div>
 					</p>
 				</div>
 			</div>
@@ -227,18 +227,24 @@
 				<div class="text">
 					<h6><b>Hello</b></h6>
 					<h1 class="mb-4 mt-3">I'm <span>Priyanka </br> Shinkar</span></h1>
-					<h3 class="mb-4">Senior UI Designer</h3>
+					<h3 class="mb-4">Senior UI/UX Designer</h3>
 					<div id="social_icons">
 						<ul>
 							<li>
+								<a href="https://github.com/Priyanka-Shinkar">
+									<!-- <img src="assets/img/github1.png" class="img-fluid"> -->
+									<i class="fab fa-github"></i>
+								</a>								
+							</li>
+							<li>
+								<a href="https://www.linkedin.com/in/priyanka-shinkar-643937145/">
+									<!-- <img src="assets/img/linkedin1.png" class="img-fluid"> -->
+									<i class="fab fa-linkedin"></i>
+								</a>								
+							</li>
+							<li>
 								<i class="fab fa-behance-square"></i>
-							</li>
-							<li>
-								<i class="fab fa-instagram"></i>
-							</li>
-							<li>
-								<i class="fab fa-linkedin"></i>
-							</li>
+							</li>							
 							<li>
 								<i class="fab fa-dribbble"></i>
 							</li>
@@ -915,8 +921,8 @@
 		<!--  -->
 
 		<!--  -->
-		<!-- <section class="section clearfix" id="work-experience">
-			<div class="row">
+		<section class="section clearfix" id="work-experience">
+			<!-- <div class="row">
 				<div class="col-md-12 col-lg-12 d-flex">
 					<div class="heading-section fadeInUp animated">
 						<span class="subheading text-info">Work </span>
@@ -1126,9 +1132,9 @@
 					<span class="subheading">Design</span>
 					<h2 class="mb-4">Skills</h2>
 				</div>
-			</div> 
+			</div>  -->
 
-		</section>	 -->
+		</section> 
 		<!--  -->
 
 		<!--  -->
