--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 						<ul class="nav nav-pills smooth-scroll">
 							<!--  -->
 							<li class="nav-item">
-							  <a class="nav-link active" href="#home1">Home</a>
+							  <a class="nav-link active" href="#home1">About Me</a>
 							</li>
 
 
 							<li class="nav-item">
-							  <a class="nav-link" href="#portfolio">Portfolio</a>
+							  <a class="nav-link" href="#portfolio">Work Portfolio</a>
 							</li>
 
 							<!-- <li class="nav-item">
@@ -67,7 +67,7 @@
 							</li> -->
 
 							<li class="nav-item">
-							  <a class="nav-link" href="#skills">Skills</a>
+							  <a class="nav-link" href="#skills">Design Skills</a>
 							</li>
 
 							<!-- <li class="nav-item">
