updating email id

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 									<b> Email</b>
 								</div>
 								<div class="col-md-9 col-8 mb-3">
-									<b class="mr-2">:</b> priyankaskr22@gmail.com
+									<b class="mr-2">:</b> prishidesigner@gmail.com
 								</div>
 								<div class="col-md-3 col-3 mb-3">
 									<b> Contact</b>
