Updating UI & fixing responsivness
- adding social links
- responsiveness  of ui

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="keywords" content="UI/UX Design, User Interface Design, User Experience, Web Design, Mobile App Design, UI Designer Portfolio, Digital Product Design, Usability Testing, Prototyping, Interaction Design">
+	<meta name="description" content="Explore the portfolio of [Priyanka Shinkar], a skilled UI/UX designer specializing in user-centered, creative, and functional digital designs for web and mobile applications.">
+	<meta name="author" content="[Your Name]">
+	<meta name="robots" content="index, follow">
+
   <title>Portfolio</title>
   <!-- MDB icon -->
   <link rel="icon" href="img/fevicon.ico" type="image/x-icon">
@@ -180,8 +187,16 @@
 								<!-- <span class="subheading">Welcome</span> -->
 								<h2 class="mb-4">About Me</h2>
 							</div>							
-							<p>
+							<!-- <p>
 								Experienced Web/UI Designer with 8+ years of experience in creating and maintaining functional, attractive, and responsive UI designs.  Clear understanding of modern technologies and best design practices.
+							</p> -->
+							<p>
+								Skilled UI/UX designer specializing in creating intuitive, 
+								user-centered designs for web and mobile apps. 
+								With a focus on usability, innovation, and seamless user 
+								experiences, I help brands craft visually appealing and 
+								functional digital products. 
+								<!-- Let’s bring your vision to life! -->
 							</p>
 							<div class="row">
 								<div class="col-md-3 col-3 mb-3">
@@ -237,16 +252,22 @@
 								</a>								
 							</li>
 							<li>
-								<a href="https://www.linkedin.com/in/priyanka-shinkar-643937145/">
+								<a href="https://www.linkedin.com/in/designer-priyanka/">
 									<!-- <img src="assets/img/linkedin1.png" class="img-fluid"> -->
 									<i class="fab fa-linkedin"></i>
 								</a>								
 							</li>
 							<li>
-								<i class="fab fa-behance-square"></i>
+								<a href="https://www.behance.net/designer-priyanka">
+									<!-- <img src="assets/img/linkedin1.png" class="img-fluid"> -->
+									<i class="fab fa-behance-square"></i>
+								</a>								
 							</li>							
 							<li>
-								<i class="fab fa-dribbble"></i>
+								<a href="https://dribbble.com/PrishiDesigner">
+									<!-- <img src="assets/img/linkedin1.png" class="img-fluid"> -->
+									<i class="fab fa-dribbble"></i>
+								</a>
 							</li>
 							<li>
 							</li>
@@ -320,16 +341,16 @@
 				</div>
  				<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
 				  <li class="nav-item">
-				    <a class="nav-link active" id="logo-tab" data-toggle="pill" href="#logo" role="tab" aria-controls="logo" aria-selected="true">Logo's</a>
+				    <a class="nav-link active" id="logo-tab" data-toggle="pill" href="#logo" role="tab" aria-controls="logo" aria-selected="true">Logo Design</a>
 				  </li>
 				  <li class="nav-item">
-				    <a class="nav-link" id="dashboard-tab" data-toggle="pill" href="#dashboard" role="tab" aria-controls="dashboard" aria-selected="false">Dashboards</a>
+				    <a class="nav-link" id="dashboard-tab" data-toggle="pill" href="#dashboard" role="tab" aria-controls="dashboard" aria-selected="false">Web Application Design </a>
 				  </li>
 				  <li class="nav-item">
-				    <a class="nav-link" id="app-tab" data-toggle="pill" href="#app" role="tab" aria-controls="app" aria-selected="false">App UI (PSD's)</a>
+				    <a class="nav-link" id="app-tab" data-toggle="pill" href="#app" role="tab" aria-controls="app" aria-selected="false">Mobile Appication Design</a>
 				  </li>
 				  <li class="nav-item">
-				    <a class="nav-link" id="website-tab" data-toggle="pill" href="#website" role="tab" aria-controls="website" aria-selected="false">Websites</a>
+				    <a class="nav-link" id="website-tab" data-toggle="pill" href="#website" role="tab" aria-controls="website" aria-selected="false"> Websites (HTML/CSS) </a>
 				  </li>
 				  <!-- <li class="nav-item">
 				    <a class="nav-link" id="website-tab" data-toggle="pill" href="#website" role="tab" aria-controls="website" aria-selected="false">PSD to HTML</a>
@@ -862,7 +883,7 @@
 					<div class="row mt-5">
 						
 
-						<div class="col-3 mt-5">
+						<div class="col-md-3 mt-5">
 							<h6 class="font-weight-bold my-4">Front-End Development</h6>
 							<ul class="ps-3">
 								<li> HTML </li>
@@ -872,7 +893,7 @@
 								<li> Responsive Design </li>
 							</ul>
 						</div>
-						<div class="col-3 mt-5">
+						<div class="col-md-3 mt-5">
 							<h6 class="font-weight-bold my-4">Design Tools</h6>
 							<ul class="ps-3">
 								<li> Adobe XD </li>
@@ -884,7 +905,7 @@
 								<li> Balsamiq Mockups </li> 
 							</ul>
 						</div>
-						<div class="col-3 mt-5">
+						<div class="col-md-3 mt-5">
 							<h6 class="font-weight-bold my-4">UI/UX Expertise</h6>
 							<ul class="ps-3">
 								<li> Wireframing </li>
@@ -895,7 +916,7 @@
 								<li> User Testing </li>
 							</ul>
 						</div>
-						<div class="col-3 mt-5">
+						<div class="col-md-3 mt-5">
 							<h6 class="font-weight-bold my-4">Soft Skills</h6>
 							<ul class="ps-3">
 								<li> Time management </li>
